--- a/assemblies/pentaho-server-manual/pom.xml
+++ b/assemblies/pentaho-server-manual/pom.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
-    <artifactId>pentaho-platform-assemblies</artifactId>
     <groupId>pentaho</groupId>
-    <version>7.1-SNAPSHOT</version>
+    <artifactId>pentaho-platform-assemblies</artifactId>
+    <version>7.1.0.6-76</version>
   </parent>
-
   <artifactId>pentaho-server-manual-ce</artifactId>
+  <version>7.1.0.6-76</version>
   <packaging>pom</packaging>
-
-  <properties/>
-
   <dependencies>
     <dependency>
       <groupId>pentaho</groupId>
@@ -41,7 +36,6 @@
       <type>war</type>
     </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
@@ -91,5 +85,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
