--- a/assemblies/pentaho-style/pom.xml
+++ b/assemblies/pentaho-style/pom.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pentaho-platform-assemblies</artifactId>
-    <version>7.1-SNAPSHOT</version>
+    <version>7.1.0.6-76</version>
   </parent>
-
   <artifactId>pentaho-style</artifactId>
+  <version>7.1.0.6-76</version>
   <packaging>war</packaging>
-
   <properties>
-    <prepared.war.directory>${pentaho-server.directory}/tomcat/webapps/pentaho-style</prepared.war.directory>
     <package.resources.directory>${basedir}/src/main/webapp</package.resources.directory>
+    <prepared.war.directory>${pentaho-server.directory}/tomcat/webapps/pentaho-style</prepared.war.directory>
   </properties>
-
   <build>
     <plugins>
       <plugin>
@@ -31,5 +27,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
